--- a/app/blueprints/user/templates/user/dashboard.html
+++ b/app/blueprints/user/templates/user/dashboard.html
@@ -68,7 +68,7 @@
         {{ flash.render() }}
         <div class="max-w-10xl mx-auto px-4 sm:px-6 md:px-8" style="height:80vh;">
             <!-- Replace with your content -->
-            <div class="mt-5 mb-4 grid lg:grid-cols-4 sm:gap-1 lg:gap-5 sm:grid-cols-2 text-right">
+            <div class="mt-5 grid lg:grid-cols-4 sm:gap-1 lg:gap-5 sm:grid-cols-2 text-right">
                 <div class="sm:col-span-2 lg:col-span-3 text-md leading-5 font-medium py-3">
                     <div id="search-results" class="text-gray-500 text-left" style="display:none">Showing results for: '<span
                             id="search-term" class="text-gray-700"></span>'
@@ -122,7 +122,7 @@
                 </div>
             </div>
 
-            <h1 class="mb-5 text-xl font-w700 text-gray-900">Products</h1>
+            <h1 class="mb-2 text-xl font-w700 text-gray-900">Products</h1>
             {% if products|length > 0 %}
                 <div class="flex flex-col mb-5">
                     <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
