--- a/app/blueprints/user/templates/user/product.html
+++ b/app/blueprints/user/templates/user/product.html
@@ -91,7 +91,7 @@
                                         {{ product['body_html'] }}
                                     </dd>
                                 </div>
-                                {% if product['variants'] | any_filter('requires_shipping', true) %}
+                                {% if product['variants'] | any_attribute_filter('requires_shipping', true) %}
                                     <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
                                         <dt class="text-sm leading-5 font-medium text-gray-500">
                                             Variants
