--- a/app/blueprints/user/templates/user/stores.html
+++ b/app/blueprints/user/templates/user/stores.html
@@ -81,11 +81,15 @@
                                             class="group relative bg-white rounded-lg shadow-sm cursor-pointer focus:outline-none focus:ring-1 focus:ring-offset-2 focus:ring-indigo-500"
                                             >
                                             <div class="rounded-lg border border-gray-300 bg-white px-6 py-4 hover:border-gray-400 sm:flex sm:justify-between">
-                                                <div class="flex items-center">
-                                                    <div class="text-sm">
-                                                        <p class="font-medium text-gray-900">
-                                                            {{ shop.url }}
+                                                <div class="items-center">
+                                                    <div class="text-lg w-full">
+                                                        <p class="text-gray-900">
+                                                            {{ shop.url | title }}
                                                         </p>
+                                                    </div>
+                                                    <div class="text-gray-500 text-sm">
+                                                        {% set sync_count = destinations|selectattr('active', 'equalto', True ) | list | length %}
+                                                        <p class="">Actively synced with {{ sync_count }} store{% if sync_count == 1 %}{% else %}s{% endif %}</p><br/>
                                                     </div>
                                                 </div>
                                             </div>
@@ -108,46 +112,57 @@
                                         <li id="{{ sync.destination_id }}" tabindex="0" role="radio" aria-checked="true"
                                             class="group relative bg-white rounded-lg shadow-sm focus:outline-none focus:ring-1 focus:ring-offset-2 focus:ring-indigo-500"
                                             >
-                                            <a href="{{ url_for('user.sync', sync_id=sync.sync_id) }}" >
-                                                <div class="rounded-lg border border-gray-300 bg-white px-6 py-4 hover:border-gray-400 sm:flex sm:justify-between">
-                                                    <div class="flex items-center w-full">
-                                                        <div class="grid grid-cols-4 gap-5">
-                                                            <div class="col-span-3">
-                                                                <div class="text-lg">
-                                                                    <p class="text-gray-900">
-                                                                        {{ sync.destination_url | title }} -
-                                                                        <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium {% if not sync.active %}bg-gray-100 text-gray-800{% else %}bg-green-100 text-green-800{% endif %}">
-                                                                            {% if not sync.active %}Inactive{% else %}Active{% endif %}
-                                                                        </span>
-                                                                    </p>
-                                                                </div>
-                                                                <div class="text-gray-500 text-sm">
-                                                                    {% set plan = plans|selectattr('id', 'equalto', sync.plan_id ) | list | first %}
-                                                                    <p class="sm:inline">{{ sync.plan|title }} plan - ${{ plan.price }}/mo</p><br/>
-                                                                    <p class="sm:inline">x/{% if plan.limit > 5000 %}Unlimited{% else %}{{ plan.limit }}{% endif %} product syncs used</p><br/>
-                                                                </div>
+                                            <div class="rounded-lg border border-gray-300 bg-white px-6 py-4 hover:border-gray-400 sm:flex sm:justify-between">
+                                                <div class="flex items-center w-full">
+                                                    <div class="grid grid-cols-4 gap-5">
+                                                        <div class="col-span-3">
+                                                            <div class="text-lg">
+                                                                <p class="text-gray-900">
+                                                                    {{ sync.destination_url | title }} -
+                                                                    <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium {% if not sync.active %}bg-gray-100 text-gray-800{% else %}bg-green-100 text-green-800{% endif %}">
+                                                                        {% if not sync.active %}Inactive{% else %}Active{% endif %}
+                                                                    </span>
+                                                                </p>
                                                             </div>
-                                                            <div class="col-span-1 mt-3">
-                                                                <span class="ml-3 text-center inline-flex rounded-md shadow-sm">
-                                                                    {% if sync.active %}
-                                                                        <button type="button"
-                                                                                class="inline-flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out"
-                                                                                onclick="SyncProducts('{{ sync.sync_id }}', this)">
-                                                                          Sync <i class="fa fa-refresh ml-3 pt-1"></i>
-                                                                        </button>
-                                                                    {% else %}
-                                                                        <button type="button"
-                                                                            class="inline-flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out"
-                                                                            onclick="ActivateSync('{{ sync.sync_id }}', '{{ sync.destination_id }}', this);">
-                                                                            Activate
-                                                                        </button>
-                                                                    {% endif %}
-                                                                </span>
+                                                            <div class="text-gray-500 text-sm">
+                                                                {% set plan = plans|selectattr('id', 'equalto', sync.plan_id ) | list | first %}
+                                                                <p class="sm:inline">{{ sync.plan|title }} plan - ${{ plan.price }}/mo</p><br/>
+                                                                <p class="sm:inline">x/{% if plan.limit > 5000 %}Unlimited{% else %}{{ plan.limit }}{% endif %} product syncs used</p><br/><br/>
+                                                                <a href="{{ url_for('user.sync', sync_id=sync.sync_id) }}">
+                                                                    <p class="sm:inline text-indigo-600"><u>Choose which products to sync</u></p><br/>
+                                                                </a>
                                                             </div>
+                                                        </div>
+                                                        <div class="col-span-1 mt-3">
+                                                            <span class="ml-3 text-center items-center rounded-md shadow-sm">
+                                                                {% if sync.active %}
+                                                                    <button type="button"
+                                                                            class=" mb-5 inline-flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out"
+                                                                            onclick="SyncProducts('{{ sync.sync_id }}', this)">
+                                                                      Sync <i class="fa fa-refresh ml-3 pt-1"></i>
+                                                                    </button>
+                                                                    <button type="button"
+                                                                            class="inline-flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-red-600 hover:bg-red-500 focus:outline-none focus:border-red-700 focus:shadow-outline-red active:bg-red-700 transition duration-150 ease-in-out"
+                                                                            onclick="ActivateSync('{{ sync.sync_id }}', '{{ sync.destination_id }}', false, this);">
+                                                                      Deactivate
+                                                                    </button>
+                                                                {% else %}
+                                                                    <button type="button"
+                                                                            class="disabled mb-5 inline-flex justify-center py-2 px-4 text-sm leading-5 font-medium rounded-md text-white bg-gray-400 transition duration-150 ease-in-out"
+                                                                            onclick="return false;">
+                                                                      Sync <i class="fa fa-refresh ml-3 pt-1"></i>
+                                                                    </button>
+                                                                    <button type="button"
+                                                                        class="inline-flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out"
+                                                                        onclick="ActivateSync('{{ sync.sync_id }}', '{{ sync.destination_id }}', true, this);">
+                                                                        Activate
+                                                                    </button>
+                                                                {% endif %}
+                                                            </span>
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </a>
+                                            </div>
                                         </li>
                                     {% endfor %}
                                 </ul>
@@ -204,20 +219,21 @@
         document.getElementById(val.id + '_border').classList.add('border-indigo-500');
     }
 
-    function ActivateSync(sync_id, shop_id, el){
+    function ActivateSync(sync_id, shop_id, activate, el){
         var url = "{{ url_for('user.activate_sync') }}";
         $.ajax({
             url: url,
             type: 'POST',
-            data: {'sync_id': sync_id, 'shop_id': shop_id},
+            data: {'sync_id': sync_id, 'shop_id': shop_id, 'activate':activate},
             success: function (response) {
                 if ('success' in response){
-                    el.innerText = "Activated";
-                    el.classList.remove('bg-indigo-600');
-                    el.classList.remove('hover:bg-indigo-500');
-                    el.classList.add('hover:bg-green-500');
-                    el.classList.add('bg-green-600');
-                    el.removeAttribute("onclick");
+                    {#el.innerText = "Activated";#}
+                    {#el.classList.remove('bg-indigo-600');#}
+                    {#el.classList.remove('hover:bg-indigo-500');#}
+                    {#el.classList.add('hover:bg-green-500');#}
+                    {#el.classList.add('bg-green-600');#}
+                    {#el.removeAttribute("onclick");#}
+                    location.reload();
                 }
             },
             error: function (xhr) {
@@ -227,7 +243,7 @@
 
 
     function SyncProducts(sync_id, el){
-        var url = "{{ url_for('user.sync_products') }}";
+        var url = "{{ url_for('user.sync_all_products') }}";
         $.ajax({
             url: url,
             type: 'POST',
