--- a/app/blueprints/user/templates/user/includes/product_table.html
+++ b/app/blueprints/user/templates/user/includes/product_table.html
@@ -7,15 +7,17 @@
 <body>
     <table class="min-w-full divide-y divide-gray-200">
         <thead>
-            <tr class="product-row w-full">
-                <th class="px-6 py-3 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider"
-                    style="width:5%">
-                    <div class="flex items-center h-5">
-                        <input name="product" type="checkbox"
-                               class="cursor-pointer focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
-                        onchange="SelectAllProducts(this)">
-                    </div>
-                </th>
+            <tr class="product-row-header w-full">
+                {% if sync_id %}
+                    <th class="px-6 py-3 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider"
+                        style="width:5%">
+                        <div class="flex items-center h-5">
+                            <input name="product" type="checkbox"
+                                   class="cursor-pointer focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
+                            onchange="SelectAllProducts(this)">
+                        </div>
+                    </th>
+                {% endif %}
                 <th class="px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider"
                 style="width:20%">
                     Title
@@ -45,14 +47,19 @@
             </tr>
         </thead>
         <tbody class="bg-white divide-y divide-gray-200">
+        <input type="hidden" name="sync_id" value="{{ sync_id }}" />
         {% for product in products %}
             <tr class="product-row">
-                <td class="px-6 py-4 whitespace-no-wrap text-center" style="width:5%">
-                    <div class="flex items-center h-5">
-                        <input name="product" type="checkbox"
-                               class="product-checkbox cursor-pointer focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded">
-                    </div>
-                </td>
+                {% if sync_id %}
+                    <td class="px-6 py-4 whitespace-no-wrap text-center" style="width:5%">
+                        <div class="flex items-center h-5">
+                            <input name="product" type="checkbox" value="{{ product.product_id }}"
+                                   class="product-checkbox cursor-pointer focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
+                                   {% if product_ids | exists_filter(product.product_id) %}checked{% endif %}
+                            >
+                        </div>
+                    </td>
+                {% endif %}
                 <td class="px-6 py-4 whitespace-no-wrap" style="width:20%">
                     <div class="flex items-center">
                         <div class="flex-shrink-0 h-10 w-10">
@@ -63,10 +70,10 @@
                         </div>
                         <div class="ml-4 truncate">
                             <div class="text-sm leading-5 font-medium text-gray-900 truncate">
-                                {{ product.title }}
+                                 {{ product.product_id }} - {{ product.title }}
                             </div>
                             <div class="text-sm leading-5 text-gray-500">
-                                {% if product.variants | any_filter('requires_shipping', true) %}
+                                {% if product.variants | any_attribute_filter('requires_shipping', true) %}
                                     Physical product
                                 {% else %}
                                     Digital product
@@ -85,7 +92,7 @@
                     {% endfor %}
                 </td>
                 <td class="px-6 py-4 whitespace-no-wrap" style="width:10%">
-                    {% if product.variants | any_filter('requires_shipping', true) %}
+                    {% if product.variants | any_attribute_filter('requires_shipping', true) %}
                         {% for variant in product.variants %}
                             <div class="text-sm {% if not loop.last %}mb-2{% endif %} leading-5 text-gray-500">{{ variant['option1'] }}</div>
                         {% endfor %}
@@ -100,7 +107,7 @@
                     {% endfor %}
                 </td>
                 <td class="px-6 py-4 whitespace-no-wrap text-sm leading-5 text-gray-500" style="width:10%">
-                    {% if product.variants | any_filter('requires_shipping', true) %}
+                    {% if product.variants | any_attribute_filter('requires_shipping', true) %}
                         {% for variant in product.variants %}
                             <div class="text-sm {% if not loop.last %}mb-2{% endif %} leading-5 text-gray-500">{{ variant['inventory_quantity'] }}</div>
                         {% endfor %}
